Different type notifications added. Toaster renamed with notification.

--- a/src/app/views/notifications-sample/notifications-sample.component.html
+++ b/src/app/views/notifications-sample/notifications-sample.component.html
@@ -2,13 +2,13 @@
     <div class="section-content">
         <label class="label medium">Notifications sample</label>
         <button bind-event="click:onCreateInfoMessage">
-            Create info
+            Create info message
         </button>
         <button bind-event="click:onCreateSuccessMessage">
-            Create info
+            Create success message
         </button>
         <button bind-event="click:onCreateErrorMessage">
-            Create info
+            Create error message
         </button>
     </div>
 </div>
