--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -39,10 +39,10 @@ html, body, [bind-component="AppRootComponent"] {
     outline: none;
 }
 
-.toaster-notification {
+.notification {
     position: fixed;
     right: 10px;
-    padding: 10px;
+    padding: 20px;
     border-radius: 5px;
     z-index: 5000;
     opacity: 0;
@@ -57,13 +57,50 @@ html, body, [bind-component="AppRootComponent"] {
     font-weight: bold;
     transition: all 0.3s ease;
 
+    min-width: 330px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    .title {
+        font-size: 18px;
+        display: flex;
+        justify-content: stretch;
+        align-items: center;
+        width: 100%;
+
+        &>div {
+            flex-grow: 1;
+        }
+    }
+
+    .body {
+        font-size: 14px;
+        max-height: 80px;
+        text-overflow: ellipsis;
+        max-width: 400px;
+        overflow: hidden;
+        white-space: pre-wrap;
+    }
+
     .close-button {
-        margin-left: 10px;
-        background-color: red;
+        background-color: rgba(0, 0, 0, 0.63);
         color: white;
         border: none;
         border-radius: 3px;
         cursor: pointer;
+        padding: 5px 10px;
+        opacity: 0.7;
+    }
+
+    .close-button:hover {
+        opacity: 1;
+    }
+
+    &.info {
+        background-color:#008ecd!important;
     }
 
     &.success {
