--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -51,6 +51,7 @@
         max-width: 800px;
         overflow-x: auto;
         background-color: #282c34;
+        color: white;
     }
 
     .navigation-panel {
