Bug related with the highlight fixed.

--- a/src/app/views/app-root/app-root.component.scss
+++ b/src/app/views/app-root/app-root.component.scss
@@ -50,7 +50,7 @@
         box-shadow: 8px 8px 12px black;
         max-width: 800px;
         overflow-x: auto;
-        background-color: #282c34;
+        background-color: #22272e;
         color: white;
     }
 
