Some stuff involved.

--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -10,7 +10,7 @@
             <hr />
             <div bind-for="componentSamples;component;idx">
                 <div class="navigation-btn" bind-event="click:onSelectPage:{component}">
-                    <div class="gear-icon"></div>
+                    <div class="icon"></div>
                     <div class="btn-title" bind="component.title"></div>
                 </div>
             </div>
@@ -18,7 +18,7 @@
             <hr />
             <div bind-for="components;component;idx">
                 <div class="navigation-btn" bind-event="click:onSelectComponent:{component}">
-                    <div class="gear-icon"></div>
+                    <div class="icon"></div>
                     <div class="btn-title" bind="component.title"></div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <hr />
             <div bind-for="services;service;idx">
                 <div class="navigation-btn" bind-event="click:onSelectService:{service}">
-                    <div class="gear-icon"></div>
+                    <div class="icon"></div>
                     <div class="btn-title" bind="service.title"></div>
                 </div>
             </div>
