Started implementation of routes.

--- a/src/app/views/app-root/app-root.component.html
+++ b/src/app/views/app-root/app-root.component.html
@@ -39,6 +39,7 @@
             <div bind-if="componentSamples[5].visible" bind-component="HttpClientSampleComponent"></div>
             <div bind-if="componentSamples[6].visible" bind-component="PropertyBindingsSampleComponent"></div>
             <div bind-if="componentSamples[7].visible" bind-component="FormsBindingSampleComponent"></div>
+            <div bind-if="componentSamples[8].visible" bind-component="RouterSampleComponent"></div>
             <div bind-if="components[0].visible" bind-component="DropDownComponent"></div>            
             <div bind-if="components[1].visible" bind-component="NotificationsSampleComponent"></div>
 
