New component syntax. Bug fixes. Adjustments and styling.

--- a/src/app/components/dashboard-component/dashboard.component.html
+++ b/src/app/components/dashboard-component/dashboard.component.html
@@ -8,10 +8,9 @@
                 Expand drop down from dashboard
             </button>
         </div>
-        <div bind-component="DropDownComponent"
-             bind-property="dropDownExpanded->expanded,itemsSource->itemsSource"
-             bind-property-changed="expandedChanged->dropDownExpandedChanged">
-        </div>
-        
+        <DropDownComponent 
+            bind-property="dropDownExpanded->expanded,itemsSource->itemsSource"
+            bind-property-changed="expandedChanged->dropDownExpandedChanged"
+        />
     </div>
 </div>
