--- a/src/app/views/property-bindings-sample/property-bindings-sample.component.html
+++ b/src/app/views/property-bindings-sample/property-bindings-sample.component.html
@@ -1,6 +1,6 @@
 <div class="property-bindings-sample-root">
     <div class="section-content">
         <label class="label medium">Property bindings sample</label>
-        <div bind-component="DashboardComponent"></div>
+        <DashboardComponent />
     </div>
 </div>
