--- a/src/app/components/analogue-clock/analogue-clock.component.scss
+++ b/src/app/components/analogue-clock/analogue-clock.component.scss
@@ -1,11 +1,12 @@
-[bind-component="AnalogueClockComponent"] {
+AnalogueClockComponent {
     position: absolute;
-    top: 5px;
-    left: 95%;
+    top: 155px;
+    left: 93%;
     box-shadow: 1px 1px 30px #000;
     border-radius: 30px;
     z-index: 9000;
-    padding: 10px;
+    padding: 15px 15px 12px 15px;
+
 
     background-color: rgba(0, 0, 0, 0.63);
     color: white;
@@ -20,7 +21,7 @@
 .analogue-clock-component-root {
     // Options
     $black: #1b1e23;
-    $size: 100px;
+    $size: 120px;
     $white: #f4eed7;
     $feature : #4b9aaa;
 
