--- a/src/app/views/simple-binding-sample/simple-binding-sample.component.html
+++ b/src/app/views/simple-binding-sample/simple-binding-sample.component.html
@@ -1,6 +1,7 @@
 <div class="simple-binding-root">
     <div class="section-content">
         <label class="label medium">Simple binding example</label>
+        <div style="background-color: crimson;" bind-dom-property="innerHTML:testProperty"></div>
         <div bind-text="testProperty"></div>
         <div bind-text="complexObject.property1"></div>
         <div bind-text="complexObject.deepProperty.test"></div>
